# evcon

./: .gitignore  COPYING  Makefile.am  README.md  autogen.sh  configure.ac  evcon-ev.pc.in  evcon-event.pc.in  evcon-glib.pc.in  evcon.pc.in  libevcon-ev0.symbols  libevcon-event0.symbols  libevcon-glib0.symbols  libevcon0.symbols
src/: Makefile.am
src/backend-ev/: Makefile.am  ev-backend.c  evcon-ev.h
src/backend-event/: Makefile.am  evcon-event.h  event-backend.c
src/backend-glib/: Makefile.am  evcon-glib.h  glib-allocator.c  glib-backend.c
src/backend-qt/: Makefile.am
src/core/: Makefile.am  evcon-allocator.h  evcon-backend.h  evcon-config-private.h.in  evcon-config.h.in  evcon.c  evcon.h
src/tests/: Makefile.am  evcon-echo.c  evcon-echo.h  evcon-test-ev.c  evcon-test-event.c  evcon-test-glib.c
